# rs-graphdb

./: .gitignore  ALGORITHMS.md  CYPHER_GUIDE.md  Cargo.toml  FEATURES.md  LICENSE  README.md  build.rs  sync.ffs_db  test_group_by.rs
benches/: batch_write_benchmarks.rs  query_benchmarks.rs
examples/: algorithms_demo.rs  cache_demo.rs  concurrent_demo.rs  cypher_demo.rs  demo_server.rs  grpc_client_test.rs  grpc_server.rs
proto/: graphdb.proto
src/: concurrent.rs  index.rs  index_advanced.rs  index_composite.rs  index_persistent.rs  index_schema.rs  lib.rs  query.rs  query_engine.rs  query_stream.rs  server.rs  service.rs
src/algorithms/: astar.rs  centrality.rs  community.rs  kcore.rs  louvain.rs  mod.rs  pagerank.rs  scc.rs  shortest_path.rs  (+2 more)
static/: index.html
tests/: advanced_aggregation_test.rs  advanced_index_test.rs  aggregation_enhanced_test.rs  algorithms_advanced_test.rs  algorithms_comprehensive_test.rs  algorithms_test.rs  all_shortest_paths_test.rs  async_write_test.rs  basic.rs  batch_write_test.rs  cache_integration_test.rs  call_enhanced_test.rs  call_subquery_test.rs  composite_index_test.rs  constraints_test.rs  core_features_test.rs  cypher_aggregation_execution_test.rs  cypher_aggregation_test.rs  cypher_create_test.rs  cypher_delete_test.rs  cypher_extended.rs  cypher_test.rs  cypher_transaction_test.rs  debug_list.rs  debug_rel_parse.rs  enhanced_query_test.rs  foreach_test.rs  graph_transaction_test.rs  index_query.rs  merge_comprehensive_test.rs  merge_test.rs  multi_rel_merge_exec_test.rs  multi_rel_merge_test.rs  parser_debug_test.rs  pattern_matching_test.rs  query.rs  query_advanced.rs  query_extended.rs  query_reverse.rs  server_api_test.rs  (+13 more)
web-ui/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts  vitest.config.ts
(+73 files in other folders)
