[package]
name = "rs-graphdb"
version = "0.0.1"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
nom = "7.1"
tower-http = { version = "0.6", features = ["cors"] }
sled = "0.34"
bincode = "1.3"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "query_benchmarks"
harness = false
