[package]
name = "rs-graphdb"
version = "0.0.1"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
nom = "7.1"
tower-http = { version = "0.6", features = ["cors", "fs"] }
sled = "0.34"
bincode = "1.3"
regex = "1.11"
rand = "0.8"
futures = "0.3"
pin-project = "1.1"

# Cache dependencies
chrono = { version = "0.4", optional = true }

# gRPC dependencies
tonic = { version = "0.12", optional = true }
prost = { version = "0.13", optional = true }

[dev-dependencies]
criterion = "0.5"
tempfile = "3.13"
tower = "0.5"
http-body-util = "0.1"

[build-dependencies]
tonic-build = { version = "0.12", optional = true }
prost-build = { version = "0.13", optional = true }

[features]
default = []
grpc = ["tonic", "prost", "tonic-build", "prost-build"]
caching = ["chrono"]

# Examples that require gRPC feature
[[example]]
name = "grpc_server"
path = "examples/grpc_server.rs"
required-features = ["grpc"]

[[example]]
name = "grpc_client_test"
path = "examples/grpc_client_test.rs"
required-features = ["grpc"]

# Cache demo requires caching feature
[[example]]
name = "cache_demo"
path = "examples/cache_demo.rs"
required-features = ["caching"]

[[bench]]
name = "query_benchmarks"
harness = false
